1. crud dialog 2. 表單基本版型
